--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -1,4 +1,4 @@
-<div class="grid-view-item{% unless product.available %} grid-view-item--sold-out{% endunless %} product-card" data-product-card>
+<div class="grid-view-item{% unless product.available %} grid-view-item--sold-out{% endunless %} product-card{% if product.images.size > 1 %} has-hover-image{% endif %}" data-product-card>
   <a class="grid-view-item__link grid-view-item__image-container full-width-link" href="{{ product.url | within: collection }}">
     <span class="visually-hidden">{{ product.title }}</span>
   </a>
@@ -22,9 +22,26 @@
               data-aspectratio="{{ product.featured_image.aspect_ratio }}"
               data-sizes="auto"
               data-image>
+
+        <!-- HOVER IMAGE -->
+              {% if product.images.size > 1 %}
+                {% for image in product.images %}
+                  {% if image != product.featured_image %}
+        <img id="{{ image.id }}"
+              class="grid-view-item__image hover-image lazyload"
+              alt="{{ product.featured_image.alt }}"
+              src="{{ image.src | img_url: '720x720' }}"
+              >
+                    {% break %}
+                  {% endif %}
+                {% endfor %}
+              {% endif %}
+        <!-- /HOVER IMAGE -->
+
       </div>
     </div>
     <div class="placeholder-background placeholder-background--animation" data-image-placeholder></div>
+
   </div>
 
   <noscript>
