feature & fix: added settings for hover images and hiding homepage link in nav as well as some mobile optimization

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -512,6 +512,32 @@
         "zh-TW": "啟用標籤篩選功能"
       },
       "default": true
+    },
+    {
+      "type": "checkbox",
+      "id": "allow_mouseover_image",
+      "label": {
+        "da": "Allow alternate hover image",
+        "de": "Allow alternate hover image",
+        "en": "Allow alternate hover image",
+        "es": "Allow alternate hover image",
+        "fi": "Allow alternate hover image",
+        "fr": "Allow alternate hover image",
+        "hi": "Allow alternate hover image",
+        "it": "Allow alternate hover image",
+        "ja": "Allow alternate hover image",
+        "ko": "Allow alternate hover image",
+        "ms": "Allow alternate hover image",
+        "nb": "Allow alternate hover image",
+        "nl": "Allow alternate hover image",
+        "pt-BR": "Allow alternate hover image",
+        "pt-PT": "Allow alternate hover image",
+        "sv": "Allow alternate hover image",
+        "th": "Allow alternate hover image",
+        "zh-CN": "Allow alternate hover image",
+        "zh-TW": "Allow alternate hover image"
+      },
+      "default": true
     }
   ]
 }
