--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2488,6 +2488,12 @@ textarea {
   a {
     padding: 3px 10px;
   }
+  /* EDIT */
+  &.hide-home-link {
+    li:first-child {
+      display: none;
+    }
+  }
 }
 
 .site-nav--centered {
@@ -2887,15 +2893,20 @@ hr {
 }
 
 /* EDIT */
-
 .has-hover-image {
   .hover-image {
     opacity: 0;
-    transition: opacity 0.3s;
   }
-  &:hover, &:focus {
+}
+@media only screen and (min-width: 750px) {
+  .has-hover-image {
     .hover-image {
-      opacity: 1;
+      transition: opacity 0.3s;
+    }
+    &:hover, &:focus {
+      .hover-image {
+        opacity: 1;
+      }
     }
   }
 }
@@ -6970,6 +6981,12 @@ $toolbar-height-small: 46px;
     &.small--one-half {
       @include flex(1 0 50%);
       max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    &.small--full {
+      @include flex(1 0 100%);
+      max-width: 100%;
       margin-left: auto;
       margin-right: auto;
     }
