--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -13,7 +13,7 @@
       {%- assign grid_item_width = 'medium-up--one-half' -%}
     {% when 3 %}
       {%- assign max_height = 345 -%}
-      {%- assign grid_item_width = 'small--one-half medium-up--one-third' -%}
+      {%- assign grid_item_width = 'small--full medium-up--one-third' -%}
     {% when 4 %}
       {%- assign max_height = 250 -%}
       {%- assign grid_item_width = 'small--one-half medium-up--one-quarter' -%}
@@ -267,6 +267,32 @@
         "zh-TW": "顯示「檢視全部」按鈕"
       },
       "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "allow_mouseover_image",
+      "label": {
+        "da": "Allow alternate hover image",
+        "de": "Allow alternate hover image",
+        "en": "Allow alternate hover image",
+        "es": "Allow alternate hover image",
+        "fi": "Allow alternate hover image",
+        "fr": "Allow alternate hover image",
+        "hi": "Allow alternate hover image",
+        "it": "Allow alternate hover image",
+        "ja": "Allow alternate hover image",
+        "ko": "Allow alternate hover image",
+        "ms": "Allow alternate hover image",
+        "nb": "Allow alternate hover image",
+        "nl": "Allow alternate hover image",
+        "pt-BR": "Allow alternate hover image",
+        "pt-PT": "Allow alternate hover image",
+        "sv": "Allow alternate hover image",
+        "th": "Allow alternate hover image",
+        "zh-CN": "Allow alternate hover image",
+        "zh-TW": "Allow alternate hover image"
+      },
+      "default": true
     }
   ],
   "presets": [
