--- a/snippets/site-nav.liquid
+++ b/snippets/site-nav.liquid
@@ -1,4 +1,4 @@
-<ul class="site-nav list--inline {{ nav_alignment }}" id="SiteNav">
+<ul class="site-nav list--inline {{ nav_alignment }}{% if settings.hide_home_link %} hide-home-link{% endif %}" id="SiteNav">
   {% for link in linklists[section.settings.main_linklist].links %}
     {%- assign child_list_handle = link.title | handleize -%}
 
