--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3148,8 +3148,11 @@ $slick-dot-size-small: 10px;
 
 /*================ Index sections ================*/
 .index-section {
+  /* EDIT */
   padding-top: $section-spacing-small;
   padding-bottom: $section-spacing-small;
+  /*padding-top: 0;
+  padding-bottom: 0;*/
 
   @include media-query($medium-up) {
     padding-top: $section-spacing;
@@ -3189,7 +3192,7 @@ $slick-dot-size-small: 10px;
 
 // Flush sections should be tight to the footer if they are last on the page
 .index-section--flush:last-child {
-  margin-bottom: -$section-spacing-small;
+  margin-bottom: /* EDIT */ -55px;/* -$section-spacing-small;*/
 }
 
 [class*="index-section--flush"]:last-child {
@@ -3786,6 +3789,64 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 
   @include media-query($medium-up) {
     margin-bottom: 1rem;
+  }
+}
+
+/* EDIT */
+/* Custom gallery scrolling collection */
+$scroller-button-width: 30px;
+
+.gallery-scroller-container { /* container */
+  display: flex;
+  align-items: center;
+  margin-left: $scroller-button-width*-1;
+  margin-right: $scroller-button-width*-1;
+}
+
+.gallery-scroller-list { /* ul wrapper of actual elements */
+  width: 100%;
+}
+
+.gallery-sroller { /* buttons */
+  width: $scroller-button-width;
+  text-align: center; 
+
+  svg {
+    display: inline-block;
+  }
+}
+
+@media only screen and (min-width: 750px) { /* large viewports */
+  .gallery-sroller {
+    opacity: 0;
+    cursor: default;
+  }
+}
+
+@media only screen and (max-width: 749px) { /* small viewports */
+
+  .gallery-sroller { /* buttons */
+    position: relative;
+    &.left {
+      left: 11px;
+    }
+    &.right {
+      right: 11px;
+    }
+  }
+
+  .gallery-scroller-container { /* container */
+    margin-left: -22px;
+    margin-right: -22px;
+  }
+
+  .gallery-scroller-list {
+    overflow: hidden;
+    margin-left: 0;
+
+    .grid__item {
+      padding: 0 11px;
+    }
   }
 }
 
@@ -6804,6 +6865,11 @@ $toolbar-height-small: 46px;
   @include media-query($small) {
     max-width: 400px;
     margin: 0 auto;
+  }
+
+  /* EDIT */
+  &.full_width_images {
+    max-width: 100%;
   }
 }
 
