--- a/sections/custom-content.liquid
+++ b/sections/custom-content.liquid
@@ -26,6 +26,9 @@
         {% when '100%' %}
           {%- assign max_height = 1090 -%}
           {%- assign block_width = 'one-whole' -%}
+        {% when 'Full Page' %}
+          {%- assign max_height = 1090 -%}
+          {%- assign block_width = 'full-page' -%}
       {% endcase %}
 
       {% if block.type == 'image' %}
@@ -481,6 +484,30 @@
                 "th": "100%",
                 "zh-CN": "100%",
                 "zh-TW": "100%"
+              }
+            },
+            {
+              "value": "Full Page",
+              "label": {
+                "da": "Full Page",
+                "de": "Full Page",
+                "en": "Full Page",
+                "es": "Full Page",
+                "fi": "Full Page",
+                "fr": "Full Page",
+                "hi": "Full Page",
+                "it": "Full Page",
+                "ja": "Full Page",
+                "ko": "Full Page",
+                "ms": "Full Page",
+                "nb": "Full Page",
+                "nl": "Full Page",
+                "pt-BR": "Full Page",
+                "pt-PT": "Full Page",
+                "sv": "Full Page",
+                "th": "Full Page",
+                "zh-CN": "Full Page",
+                "zh-TW": "Full Page"
               }
             }
           ]
@@ -1030,6 +1057,30 @@
                 "th": "100%",
                 "zh-CN": "100%",
                 "zh-TW": "100%"
+              }
+            },
+            {
+              "value": "Full Page",
+              "label": {
+                "da": "Full Page",
+                "de": "Full Page",
+                "en": "Full Page",
+                "es": "Full Page",
+                "fi": "Full Page",
+                "fr": "Full Page",
+                "hi": "Full Page",
+                "it": "Full Page",
+                "ja": "Full Page",
+                "ko": "Full Page",
+                "ms": "Full Page",
+                "nb": "Full Page",
+                "nl": "Full Page",
+                "pt-BR": "Full Page",
+                "pt-PT": "Full Page",
+                "sv": "Full Page",
+                "th": "Full Page",
+                "zh-CN": "Full Page",
+                "zh-TW": "Full Page"
               }
             }
           ]
